WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
139646
Report network process crashes during layout tests
https://bugs.webkit.org/show_bug.cgi?id=139646
Summary
Report network process crashes during layout tests
Antti Koivisto
Reported
2014-12-15 09:32:07 PST
Currently network process crashes just show up as test timeouts. The test report should include network process crashes and stacks.
Attachments
proposed patch
(8.45 KB, patch)
2015-02-06 11:54 PST
,
Alexey Proskuryakov
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2015-02-06 11:54:00 PST
Created
attachment 246170
[details]
proposed patch
WebKit Commit Bot
Comment 2
2015-02-06 13:21:16 PST
Comment on
attachment 246170
[details]
proposed patch Clearing flags on attachment: 246170 Committed
r179754
: <
http://trac.webkit.org/changeset/179754
>
WebKit Commit Bot
Comment 3
2015-02-06 13:21:20 PST
All reviewed patches have been landed. Closing bug.
David Kilzer (:ddkilzer)
Comment 4
2015-02-07 07:23:20 PST
Is there a bug to track doing this same thing for the Databases process?
Alexey Proskuryakov
Comment 5
2015-02-07 11:38:33 PST
No, there isn't such a bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug