Source/WebKit2/UIProcess/API/C/mac/WKContextPrivateMac.h
@@ -70,6 +70,8 @@ WK_EXPORT WKStringRef WKPlugInInfoIsSandboxedKey();
 WK_EXPORT bool WKContextShouldBlockWebGL();
 WK_EXPORT bool WKContextShouldSuggestBlockWebGL();
 
+WK_EXPORT pid_t WKContextGetNetworkProcessIdentifier(WKContextRef context);
+
 #ifdef __cplusplus
 }
 #endif
