Source/WebKit2/UIProcess/API/C/mac/WKContextPrivateMac.mm
@@ -146,3 +146,13 @@ bool WKContextShouldSuggestBlockWebGL()
 {
     return WKShouldSuggestBlockingWebGL();
 }
+
+pid_t WKContextGetNetworkProcessIdentifier(WKContextRef contextRef)
+{
+#if ENABLE(NETWORK_PROCESS)
+    return toImpl(contextRef)->networkProcessIdentifier();
+#else
+    UNUSED_PARAM(contextRef);
+    return 0;
+#endif
+}
